<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="71dp"
        app:srcCompat="@drawable/google_2015_logo_svg"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_google_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:textColor="@color/black"
        android:textSize="27sp"
        />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="161dp"
        app:layout_constraintTop_toBottomOf="@id/CreateAccount"
        android:layout_marginTop="15dp"


        />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/last_name"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="161dp"
        app:layout_constraintTop_toBottomOf="@+id/FirstName"
        android:layout_marginTop="15dp"


        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/LastName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="243dp"
        app:helperText="You can use Letters,Numbers & Periods"
        app:suffixText=" @Gmail.com"
        app:suffixTextColor="@color/black"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="161dp"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_my_current_email_address_instead"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="345dp"
        android:clickable="true"
        android:textColor="@color/Blue"
        android:textSize="16sp"

        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:layout_marginTop="20dp"
        android:hint="Password"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirm"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="243dp"
        app:helperText="Use 8 or more charters with a mix of letters, Numbers & Symbols "

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="161dp"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  Show Password"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="571dp" />

    <TextView
        android:id="@+id/SigninInsted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:text="@string/sign_in_instead"
        android:textColor="@color/Blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/checkBox" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="Next"
        app:layout_constraintStart_toEndOf="@id/SigninInsted"
        tools:layout_editor_absoluteY="635dp" />


</androidx.constraintlayout.widget.ConstraintLayout>